src/test/resources/scripts/language/parser/invalid/type/genericNum.sbsc
test = (a: num<int>) -> {

};

return true;